Agregé el estudio nro. 6 de la serie Salmo 23

--- a/estudios.html
+++ b/estudios.html
@@ -51,6 +51,8 @@
       <li><a href="preguntas-estudio-3.html" target="_blank">Preguntas para el estudio 2</a></li>
       <li><a href="preguntas-estudio-4.html" target="_blank">Preguntas para el estudio 3</a></li>
       <li><a href="preguntas-estudio-5.html" target="_blank">Preguntas para el estudio 4</a></li>
+      <li><a href="preguntas-estudio-6.html" target="_blank">Preguntas para el estudio 5</a></li>
+      <li><a href="preguntas-estudio-7.html" target="_blank">Preguntas para el estudio 6</a></li>
     </ul>
     <hr>
     <h3>Vida en la fe</h3>
