Modificación de la página principal y agregado de la página de escuela bíblica

--- a/estudios.html
+++ b/estudios.html
@@ -18,6 +18,7 @@
           <li><a href="estudios.html">Estudios Bíblicos</a></li>
           <li><a href="reuniones.html">Reuniones</a></li>
           <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
+          <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
       </ul>
     </nav>
     <h2>Estudios bíblicos 2021 - Primer Cuatrimestre</h2>
