--- a/reuniones.html
+++ b/reuniones.html
@@ -19,6 +19,7 @@
           <li><a href="estudios.html">Estudios Bíblicos</a></li>
           <li><a href="reuniones.html">Reuniones</a></li>
           <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
+          <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
       </ul>
     </nav>
     <h2>Reuniones generales: Sábados de 21:30 hs hasta las 23:00 hs.</h2>
