--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
                 <li><a href="estudios.html">Estudios Bíblicos</a></li>
                 <li><a href="reuniones.html">Reuniones</a></li>
                 <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
+                <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
             </ul>
         </nav>
         <div class="contenedor-principal">
-            <div class="somos sub-cont-ppal">
+            <div class="sub-cont-ppal">
                 <p>Somos una congregación de creyentes pertenecientes a la Iglesia de Jesucristo comprometidos con la misión de predicar el Evangelio y enseñar la Palabra de Dios.<br>
                 Somos discípulos de Jesucristo.</p>
             </div>
-            <div class="cree sub-cont-ppal">
+            <div class="sub-cont-ppal">
                 <p><em>Cree en el Señor Jesucristo, y serás salvo, tú y tu casa.</em><br>
                 (Hechos de los Apóstoles 16:31)</p>
             </div>
-            <div class="horarios sub-cont-ppal">
+            <div class="sub-cont-ppal">
                 <h2>Horarios de reunión</h2>
                 <p><strong>Sábado 21:30 - 23:00 hs</strong> (Reunión general)</p>
+                <p><strong>Sábado 16:00 - 17:30 hs</strong> (Escuela Bíblica - Modalidad virtual)</p>
                 <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico)</p>
                 <h2>Contacto:</h2>
                 <a href="tel:+543572531850">3572-531850</a>
             </div>
-            <div class="ubicacion sub-cont-ppal">
+            <div class="sub-cont-ppal ubicacion">
                 <iframe id="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.854379972353!2d-63.81154368529424!3d-31.774457420841056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd3198e01076ff%3A0xe48a3e7e66120b3e!2sComunidad%20Cristiana%20Laguna%20Larga!5e0!3m2!1ses!2sar!4v1613496053238!5m2!1ses!2sar"
                         style="border:0;"
