Nuevo estudio bíblico: Conquistando la Depresión y el Enojo

--- a/estudios.html
+++ b/estudios.html
@@ -21,7 +21,7 @@
           <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
       </ul>
     </nav>
-    <h2>Estudios bíblicos 2021 - Primer Cuatrimestre</h2>
+    <h2>Estudios bíblicos 2021</h2>
     <hr>
     <h3>Dioses que fallan</h3>
     <ul>
@@ -40,7 +40,7 @@
     <h3>Salmo 23</h3>
     <ul>
       <li>Inicio: 11/02/2021</li>
-      <li>Fin: 18/03/2021</li>
+      <li>Fin: 25/03/2021</li>
       <li>
         Recursos:<br>
         <ul>
@@ -56,34 +56,23 @@
       <li><a href="preguntas-estudio-7.html" target="_blank">Preguntas para el estudio 6</a></li>
     </ul>
     <hr>
-    <h3>Vida en la fe</h3>
+    <h3>Conquistando la Depresión y el Enojo</h3>
     <ul>
-      <li>Inicio: 25/03/2021</li>
-      <li>Fin: 08/04/2021</li>
+      <li>Inicio: 01/04/2021</li>
+      <li>Fin: 27/05/2021</li>
       <li>
         Recursos:<br>
         <ul>
-          <li><a href="https://app.rightnowmedia.org/es/content/details/335587" target="_blank">Vida en la fe - Coalición por el Evangelio</a></li>
+          <li><a href="https://www.bbnradio.org/wcm4/bbnbispanish/InstitutoB%c3%adblico/AccesoalosCursos/Cursosdisponiblesparaelestudio/tabid/2523/CourseID/852/Default.aspx" target="_blank">Conquistando la Depresión y el Enojo</a>, Instituto Bíblico BBN.</li>
         </ul>
       </li>
-    </ul>
-    <hr>
-    <h3>¿Cómo luce el evangelio de lunes a sábados?</h3>
-    <ul>
-      <li>Inicio: 15/04/2021</li>
-      <li>Fin: 15/04/2021</li>
-      <li>
-        Recursos:<br>
-        <ul>
-          <li><a href="https://app.rightnowmedia.org/es/content/details/335365" target="_blank">¿Cómo luce el evangelio de lunes a sábados? - Coalición por el Evangelio</a></li>
-        </ul>
-      </li>
+      <li><a href="preguntas-estudio-8.html" target="_blank">Preguntas para el estudio 1</a></li>
     </ul>
     <hr>
     <h3>Conflictos</h3>
     <ul>
-      <li>Inicio: 22/04/2021</li>
-      <li>Fin: 13/05/2021</li>
+      <li>Inicio: 03/06/2021</li>
+      <li>Fin: 24/06/2021</li>
       <li>
         Recursos:<br>
         <ul>
