Agregado de las preguntas para el estudio 2 de la depresión y el enojo

--- a/estudios.html
+++ b/estudios.html
@@ -67,6 +67,7 @@
         </ul>
       </li>
       <li><a href="preguntas-estudio-8.html" target="_blank">Preguntas para el estudio 1</a></li>
+      <li><a href="preguntas-estudio-9.html" target="_blank">Preguntas para el estudio 2</a></li>
     </ul>
     <hr>
     <h3>Conflictos</h3>
