--- a/estudios.html
+++ b/estudios.html
@@ -68,6 +68,7 @@
       </li>
       <li><a href="preguntas-estudio-8.html" target="_blank">Preguntas para el estudio 1</a></li>
       <li><a href="preguntas-estudio-9.html" target="_blank">Preguntas para el estudio 2</a></li>
+      <li><a href="preguntas-estudio-10.html" target="_blank">Preguntas para el estudio 3</a></li>
     </ul>
     <hr>
     <h3>Conflictos</h3>
