Agregado de estudios y actualización de página estudios

--- a/estudios.html
+++ b/estudios.html
@@ -22,16 +22,38 @@
       </ul>
     </nav>
     <h2>Estudios bíblicos 2021</h2>
-    <hr>
-    <h3>Dioses que fallan</h3>
+    <div class="contenedor-estudios-biblicos">
+      <h3 class="titulo-estudio">Dioses que fallan</h3>
+      <div class="contenedor-inicio-fin">
+        <img class="emoji-calendario"
+             src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/calendar_1f4c5.png"
+             alt="Emoji de un calendario">
+        <section class="inicio-fin">
+          <p>✔ Inicio: <strong>04/02/2021</strong><br>
+             ✔ Fin: <strong>04/02/2021</strong></p>
+        </section>
+      </div>
+      <div class="contenedor-recursos">
+        <img class="emoji-calendario"
+             src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/joypixels/275/books_1f4da.png"
+             alt="Emoji de libros">
+        <section class="recursos">
+          <p>Recursos:<br>
+            <a href="https://app.rightnowmedia.org/es/content/details/336048?session=336058" target="_blank">✔ Coalición Lee - Sesión 1</a><br>
+            <a href="archivos/dioses-que-fallan.pdf" target="_blank">✔ Dioses que fallan (Libro en pdf)</a>
+          </p>
+        </section>
+      </div>
+    </div>
+    
     <ul>
-      <li>Inicio: 04/02/2021</li>
-      <li>Fin: 04/02/2021</li>
+      <li></li>
+      <li></li>
       <li>
         Recursos:<br>
         <ul>
-          <li><a href="https://app.rightnowmedia.org/es/content/details/336048?session=336058" target="_blank">Coalición Lee - Sesión 1</a></li>
-          <li><a href="archivos/dioses-que-fallan.pdf" target="_blank">Dioses que fallan (Libro en pdf)</a></li>
+          <li></li>
+          <li></li>
         </ul>
       </li>
       <li><a href="preguntas-estudio-1.html">Preguntas</a></li>
