Commit previo a la publicación en Github

--- a/estudios.html
+++ b/estudios.html
@@ -45,20 +45,7 @@
         </section>
       </div>
     </div>
-    
-    <ul>
-      <li></li>
-      <li></li>
-      <li>
-        Recursos:<br>
-        <ul>
-          <li></li>
-          <li></li>
-        </ul>
-      </li>
-      <li><a href="preguntas-estudio-1.html">Preguntas</a></li>
-    </ul>
-    <hr>
+    <a href="preguntas-estudio-1.html">Preguntas</a>
     <h3>Salmo 23</h3>
     <ul>
       <li>Inicio: 11/02/2021</li>
@@ -91,6 +78,7 @@
       <li><a href="preguntas-estudio-8.html" target="_blank">Preguntas para el estudio 1</a></li>
       <li><a href="preguntas-estudio-9.html" target="_blank">Preguntas para el estudio 2</a></li>
       <li><a href="preguntas-estudio-10.html" target="_blank">Preguntas para el estudio 3</a></li>
+      <li><a href="preguntas-estudio-11.html" target="_blank">Preguntas para el estudio 4</a></li>
     </ul>
     <hr>
     <h3>Conflictos</h3>
