--- a/biblia-un-anio.html
+++ b/biblia-un-anio.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta name="viewport" content="width=device-width">
     <title>Comunidad Cristiana Laguna Larga</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="imagenes/favicon.ico">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header id="cabecera">
-      <img id="logo" src="imagenes/Logo-CCLL.jpeg" alt="Logo de Comunidad Cristiana Laguna Laguna">
-      <h1>Comunidad Cristiana Laguna Larga</h1>
-    </header>
-    <nav class="menu">
-      <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="estudios.html">Estudios Bíblicos</a></li>
-          <li><a href="reuniones.html">Reuniones</a></li>
-          <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
-      </ul>
+    <!-- Menú -->
+    <nav class="navbar fondo-menu navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="index.html">Comunidad Cristiana Laguna Larga</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="reuniones.html">Reuniones</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="estudios.html">Estudios Bíblicos</a>
+              </li>
+              <!--
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Adolescentes</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Escuela Bíblica</a>
+              </li>
+              -->
+          </ul>
+      </div>
     </nav>
     <h2>Videos para acompañar la lectura de la Biblia en un año</h2>
     <p>Para sumarse al plan de lectura de la Biblia en un año hacer <a href="https://bible.com/p/36927500/af208bf98ceac6cadbedddccc3f605a4">click aquí</a>.</p>
+    <div class="row contenedor-biblia-un-anio">
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 36</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/VqVAOqyoKCs"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        dia 2
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        dia 3
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        dia 4
+      </div>
+    </div>
+    <!--
     <table border="1">
       <thead>
         <tr>
@@ -47,6 +86,7 @@
         </td>
       </tr>
       -->
+      <!--
       <tr>
         <td class="dia"><p>23</p></td>
         <td class="video">
@@ -129,5 +169,6 @@
         </td>
       </tr>
     </table>
+  -->
   </body>
 </html>
