--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Comunidad Cristiana Laguna Larga</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="imagenes/favicon.ico">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
-            <img id="logo" src="imagenes/Logo-CCLL.jpeg" alt="Logo de Comunidad Cristiana Laguna Laguna">
-            <h1>Comunidad Cristiana Laguna Larga</h1>
-        </header>
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="estudios.html">Estudios Bíblicos</a></li>
-                <li><a href="reuniones.html">Reuniones</a></li>
-                <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
-                <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
-            </ul>
+        <!-- Menú -->
+        <nav class="navbar fondo-menu navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#">Comunidad Cristiana Laguna Larga</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="estudios.html">Estudios Bíblicos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="reuniones.html">Reuniones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
+                    </li>
+                    <!--
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Adolescentes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Escuela Bíblica</a>
+                    </li>
+                    -->
+                </ul>
+            </div>
         </nav>
-        <div class="contenedor-principal">
-            <div class="sub-cont-ppal">
-                <p>Somos una congregación de creyentes pertenecientes a la Iglesia de Jesucristo comprometidos con la misión de predicar el Evangelio y enseñar la Palabra de Dios.<br>
+        <!-- Contenedor -->
+        <div class="row contenedor-principal">
+            <div class="col-lg-12">
+                <p class="somos">Somos una congregación de creyentes pertenecientes a la 
+                Iglesia de Jesucristo comprometidos con la misión de predicar 
+                el Evangelio y enseñar la Palabra de Dios.<br>
                 Somos discípulos de Jesucristo.</p>
             </div>
-            <div class="sub-cont-ppal">
-                <p><em>Cree en el Señor Jesucristo, y serás salvo, tú y tu casa.</em><br>
+            <div class="col-lg-12">
+                <p class="texto-biblico"><em>Cree en el Señor Jesucristo, y serás salvo, tú y tu casa.</em><br>
                 (Hechos de los Apóstoles 16:31)</p>
             </div>
-            <div class="sub-cont-ppal">
-                <h2>Horarios de reunión</h2>
-                <p><strong>Sábado 21:30 - 23:00 hs</strong> (Reunión general)</p>
-                <p><strong>Sábado 16:00 - 17:30 hs</strong> (Escuela Bíblica - Modalidad virtual)</p>
-                <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico)</p>
-                <h2>Contacto:</h2>
-                <a href="tel:+543572531850">3572-531850</a>
+            <div class="col-lg-12">
+                <section class="horarios">
+                    <h2>Horarios de reunión</h2>
+                    <p><strong>Sábado 16:00 - 15:30 hs</strong> (Reunión general)</p>
+                    <p><strong>Sábado 10:30 - 12:00 hs</strong> (Escuela Bíblica - Modalidad virtual)</p>
+                    <p><strong>Viernes 21:00 - 22:30 hs</strong> (Reunión de adolescentes - Modalidad virtual)</p>
+                    <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico - Modalidad virtual)</p>
+                </section>
             </div>
-            <div class="sub-cont-ppal ubicacion">
-                <iframe id="mapa"
+            <div class="col-lg-12">
+                <section class="contacto">
+                    <h2>Contacto:</h2>
+                    <a href="tel:+543572531850">3572-531850</a>
+                </section>
+            </div>
+            <div class="col-lg-12">
+                <iframe class="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.854379972353!2d-63.81154368529424!3d-31.774457420841056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd3198e01076ff%3A0xe48a3e7e66120b3e!2sComunidad%20Cristiana%20Laguna%20Larga!5e0!3m2!1ses!2sar!4v1613496053238!5m2!1ses!2sar"
                         style="border:0;"
                         allowfullscreen=""
@@ -48,8 +77,9 @@
                 </iframe>
             </div>
         </div>
+        <!-- Pié de página -->
         <footer class="pie-de-pagina">
-            <p>Comunidad Cristiana Laguna Larga</p>
+            <p>Comunidad Cristiana Laguna Larga &copy;</p>
         </footer>
     </body>
 </html>
