Actualización de la página principal y la página de estudios. Agregado del estudio 5 de la depresión y el enojo.

--- a/estudios.html
+++ b/estudios.html
@@ -23,13 +23,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
+                    <!--
                     <li class="nav-item">
                         <a class="nav-link" href="reuniones.html">Reuniones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
                     </li>
-                    <!--
                     <li class="nav-item">
                         <a class="nav-link" href="#">Adolescentes</a>
                     </li>
@@ -86,15 +86,39 @@
         <hr>
         -->
             <div class="col-lg-12">
-                <section class="detalle-estudios">
+                <div class="detalle-estudios">
                     <h3>Conquistando la Depresión y el Enojo</h3>
-                    <h4>Recursos:</h4>
-                    <p><a href="https://www.bbnradio.org/wcm4/bbnbispanish/InstitutoB%c3%adblico/AccesoalosCursos/Cursosdisponiblesparaelestudio/tabid/2523/CourseID/852/Default.aspx" target="_blank">Conquistando la Depresión y el Enojo</a>, Instituto Bíblico BBN.</p>
-                    <p><a href="preguntas-estudio-8.html" target="_blank">Preguntas para el estudio 1</a></p>
-                    <p><a href="preguntas-estudio-9.html" target="_blank">Preguntas para el estudio 2</a></p>
-                    <p><a href="preguntas-estudio-10.html" target="_blank">Preguntas para el estudio 3</a></p>
-                    <p><a href="preguntas-estudio-11.html" target="_blank">Preguntas para el estudio 4</a></p>
-                </section>
+                    <div class="link-leccion">
+                        <a class="leccion" href="preguntas-estudio-8.html" target="_blank">
+                            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                            <p>Lección 1</p>
+                        </a>
+                    </div>
+                    <div class="link-leccion">
+                        <a class="leccion" href="preguntas-estudio-9.html" target="_blank">
+                            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                            <p>Lección 2</p>
+                        </a>
+                    </div>
+                    <div class="link-leccion">
+                        <a class="leccion" href="preguntas-estudio-10.html" target="_blank">
+                            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                            <p>Lección 3</p>
+                        </a>
+                    </div>
+                    <div class="link-leccion">
+                        <a class="leccion" href="preguntas-estudio-11.html" target="_blank">
+                            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                            <p>Lección 4</p>
+                        </a>
+                    </div>
+                    <div class="link-leccion">
+                        <a class="leccion" href="preguntas-estudio-12.html" target="_blank">
+                            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                            <p>Lección 5</p>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-12">
                 <section class="detalle-estudios">
