Actualización del estudio Desenredando tus Conflictos.

--- a/desenredando-tus-conflictos.html
+++ b/desenredando-tus-conflictos.html
@@ -67,7 +67,7 @@
                 frameborder="0"
                 allowfullscreen>
             </iframe>
-            <p>Aún NO hay preguntas asociadas a esta lección 😢</p>
+            <p><a href="desenredando-tus-conflictos-4.html">Acceder a las preguntas del estudio.</a></p>
         </div>
 
         <!--Lección 5-->
