--- a/reuniones.html
+++ b/reuniones.html
@@ -1,109 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta name="viewport" content="width=device-width">
     <title>Comunidad Cristiana Laguna Larga</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="imagenes/favicon.ico">
-  </head>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+</head>
   <body>
-    <header id="cabecera">
-      <img id="logo" src="imagenes/Logo-CCLL.jpeg" alt="Logo de Comunidad Cristiana Laguna Laguna">
-      <h1>Comunidad Cristiana Laguna Larga</h1>
-    </header>
-    <nav class="menu">
-      <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="estudios.html">Estudios Bíblicos</a></li>
-          <li><a href="reuniones.html">Reuniones</a></li>
-          <li><a href="biblia-un-anio.html">La Biblia en un Año</a></li>
-          <li><a href="escuela-biblica.html" target="_blank">Escuela Bíblica</a></li>
-      </ul>
+    <!-- Menú -->
+    <nav class="navbar fondo-menu navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="index.html">Comunidad Cristiana Laguna Larga</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="estudios.html">Estudios bíblicos</a>
+              </li>
+              <!--
+              <li class="nav-item">
+                  <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Adolescentes</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Escuela Bíblica</a>
+              </li>
+              -->
+          </ul>
+      </div>
     </nav>
-    <h2>Reuniones generales: Sábados de 21:30 hs hasta las 23:00 hs.</h2>
-    <div id="tabla">
-      <!-- Encabezado -->
-      <div class="encabezado-de-tabla"><h3>Fecha</h3></div>
-      <div class="encabezado-de-tabla"><h3>Video</h3></div>
-      <div class="encabezado-de-tabla"><h3>Audio</h3></div>
-      <!-- Reunión 20/02/2021 -->
-      <div class="elemento-de-tabla1"><p>20/02/2021</p></div>
-      <div class="elemento-de-tabla1 video-reuniones">
-        <iframe src="https://www.youtube.com/embed/ds3UL4vTOJM"
-                frameborder="0"
-                height="200"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
-      </div>
-      <div class="elemento-de-tabla1">
-        <iframe id='audio_66068344'
-                frameborder='0'
-                allowfullscreen=''
-                scrolling='no'
-                height='200'
-                style='border:1px solid #EEE; box-sizing:border-box; width:100%;'
-                src="https://ar.ivoox.com/es/player_ej_66068344_4_1.html?c1=ff6600">
-        </iframe>
-      </div>
-      <!-- Reunión 13/02/2021 -->
-      <div class="elemento-de-tabla2"><p>13/02/2021</p></div>
-      <div class="elemento-de-tabla2 video-reuniones">
-        <iframe src="https://www.youtube.com/embed/xPbXA_RXreA"
-                frameborder="0"
-                height="200"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
-      </div>
-      <div class="elemento-de-tabla2">
-        <iframe id='audio_65498680'
-                frameborder='0'
-                allowfullscreen=''
-                scrolling='no'
-                height='200'
-                style='border:1px solid #EEE; box-sizing:border-box; width:100%;'
-                src="https://ar.ivoox.com/es/player_ej_65498680_4_1.html?c1=ff6600">
-        </iframe>
-      </div>
-      <!-- Reunión 06/02/2021 -->
-      <div class="elemento-de-tabla1"><p>06/02/2021</p></div>
-      <div class="elemento-de-tabla1 video-reuniones">
-        <iframe src="https://www.youtube.com/embed/V2ibyNlrpr4"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
-      </div>
-      <div class="elemento-de-tabla1">
-        <iframe width="238"
-                height="48"
-                frameborder="0"
-                allowfullscreen=""
-                scrolling="no"
-                src="https://ar.ivoox.com/es/player_ek_65041267_2_1.html?data=l5qdlpaWepihhpywj5edaZS1k5uah5yncZKhhpywj5WRaZi3jpWah5yncafd09LS3MaPqMbgjMnW1ciJh5SZoqnd19HTb8XZjK_S1drHtsrn1dSah5yncajpytHZx9fRs4y1j5C_0cfNq83d0JKSmaiReA..&">
-        </iframe>
-      </div>
-      <!-- Reunión 30/01/2021 -->
-      <div class="elemento-de-tabla2"><p>30/01/2021</p></div>
-      <div class="elemento-de-tabla2 video-reuniones">
-        <iframe src="https://www.youtube.com/embed/zArpalOHW3w"
+    <div class="row contenedor-biblia-un-anio">
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">20/02/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/ds3UL4vTOJM"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
+                allowfullscreen></iframe>
       </div>
-      <div class="elemento-de-tabla2">
-        <iframe width="238"
-                height="48"
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">13/02/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/xPbXA_RXreA"
                 frameborder="0"
-                allowfullscreen=""
-                scrolling="no"
-                src="https://ar.ivoox.com/es/player_ek_64680947_2_1.html?data=l5mjmpWdeJihhpywj5idaZS1lZiah5yncZKhhpywj5WRaZi3jpWah5yncaLk1c7h18mPtNDmjNLSxs7Tb8XZjK_S1drHtsrn1dSah5yncajpytHZx9fRs4y1j5C_0cfNq83d0JKSmaiReA..&">
-        </iframe>
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
       </div>
-      <!--
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">06/02/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/V2ibyNlrpr4"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">30/01/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/zArpalOHW3w"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+    <!--
       Reunión 23/01/2021
       <div class="elemento-de-tabla1"><p>23/01/2021</p></div>
       <div class="elemento-de-tabla1"><iframe width="560" height="315" src="https://www.youtube.com/embed/J3zGIQRFjhQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -116,10 +87,10 @@
       <div class="elemento-de-tabla1"><p>09/01/2021</p></div>
       <div class="elemento-de-tabla1"><a href="https://photos.app.goo.gl/bofhfZrsbWhVi3VD7" target="_blank">Video de la reunión general del 09/01/2021</a></div>
       <div class="elemento-de-tabla1"><a href="https://www.dropbox.com/s/zdn2tnjto4ufoz3/210109-Acerca-de-Jesucristo.mp3?dl=0" target="_blank">Audio de la reunión general del 09/01/2021</a></div>
-      -->
     </div>
+    -->
     <footer class="pie-de-pagina">
-        <p>Comunidad Cristiana Laguna Larga</p>
+        <p>Comunidad Cristiana Laguna Larga &copy;</p>
     </footer>
   </body>
 </html>
